# Webshop_with_real-time_tracking_user_actions

./: .env-example  .env-non-dev-example  .gitignore  Dockerfile  README.md  docker-compose.yml  grafana-dashboard.json  load_seed_data.py  load_test_seed_data.py  prometheus.yml  pyproject.toml  requirements.txt
analytics-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
analytics-service/app/: config.py  main.py
analytics-service/app/analytics/: clickhouse_client.py
analytics-service/app/api/: analytics.py
analytics-service/app/clickhouse/init/: 001_create_events.sql
analytics-service/app/messaging/: broker.py  handlers.py  publisher.py
analytics-service/app/schemas/: analytics.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  seed_data.py  websockets.py
app/analytics/: clickhouse_client.py
app/api/: analytics.py  carts.py  categories.py  orders.py  pages.py  products.py  reviews.py  users.py
app/core/: container.py  security.py  unit_of_work.py
app/dao/: base.py
app/images/: router.py
app/messaging/: broker.py  email_templates.py  handlers.py  publisher.py
app/migrations/: env.py
app/models/: __init__.py  carts.py  categories.py  orders.py  products.py  reviews.py  users.py
app/orders/: router.py
app/pages/: router.py
app/products/: router.py
app/repositories/: __init__.py  (+7 more)
cart-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
cart-service/app/: config.py  dependencies.py  exceptions.py  main.py
cart-service/app/api/: carts.py
cart-service/app/core/: container.py
cart-service/app/domain/entities/: cart.py
cart-service/app/domain/interfaces/: __init__.py  carts_repo.py  unit_of_work.py
cart-service/app/domain/mappers/: cart.py
cart-service/app/messaging/: handlers.py
cart-service/app/models/: __init__.py  carts.py  processed_order_confirmations.py
cart-service/app/repositories/: carts_repository.py
cart-service/app/schemas/: carts.py
cart-service/app/services/: __init__.py  cart_service.py  product_client.py
cart-service/migrations/: env.py
cart-service/migrations/versions/: bf4621b8a9d5_initial_migration.py  d4e5f6a7b8c0_add_processed_order_confirmations.py
cart-service/tests/: conftest.py
cart-service/tests/api/: test_carts_api.py
cart-service/tests/services/: test_cart_service.py  test_product_client.py
frontend-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
frontend-service/app/: __init__.py  config.py  main.py
frontend-service/app/api/: cart_api.py  gateway.py  order_api.py  pages.py
frontend-service/app/services/: analytics_client.py  cart_client.py  product_client.py  recommend_client.py  review_client.py  user_client.py
frontend-service/app/static/js/: tracker.js
frontend-service/app/templates/: base.html  cart.html  login.html  product_detail.html  products.html  profile.html  register.html  tracker_debug.html
notification-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
order-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
product-service/: .env-example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
prometheus/: prometheus.yml
recommendations-service/: .env-example  Dockerfile  config.py  docker-compose.yaml  pyproject.toml
recommendations-service/app/: dependencies.py  main.py  store.py
recommendations-service/app/api/: recommendations.py
recommendations-service/app/database/: qdrant_client.py
recommendations-service/app/messaging/: broker.py  handlers.py
recommendations-service/app/schemas/: __init__.py  products.py  recommend.py
recommendations-service/app/services/: lexical_bm25.py  product_index_service.py  product_service_bootstrap.py  recommend_service.py  reindex_products_to_qdrant.py
recommendations-service/data/: idf.json
review-service/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
review-service/app/: config.py  dependencies.py  exceptions.py  main.py
review-service/app/api/: reviews.py
review-service/app/core/: container.py  unit_of_work.py
review-service/app/domain/entities/: reviews.py
review-service/app/domain/interfaces/: __init__.py  reviews_repo.py
review-service/app/domain/mappers/: review.py
review-service/app/models/: __init__.py  reviews.py
review-service/app/repositories/: reviews_repository.py
review-service/app/schemas/: reviews.py
review-service/app/services/: __init__.py  product_client.py  review_service.py  user_client.py
review-service/migrations/: env.py
review-service/migrations/versions/: d4804803aa07_initial_migration.py
review-service/tests/: conftest.py
review-service/tests/api/: test_review_api.py
review-service/tests/fixtures/: test_data.py
review-service/tests/services/: test_review_service.py
shared/: pyproject.toml
shared/shared/: __init__.py  constants.py  dependencies.py  logging.py
shared/shared/test_utils/: __init__.py  conftest.py
user-service/: .env-example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
user-service/app/: config.py  dependencies.py  exceptions.py  main.py
user-service/app/api/: users.py
user-service/app/core/: container.py  security.py  unit_of_work_factory.py
user-service/app/domain/entities/: idempotency_key.py  users.py
user-service/app/domain/interfaces/: __init__.py  users_repo.py
user-service/app/domain/mappers/: user.py
user-service/app/messaging/: handlers.py  publisher.py
user-service/app/models/: __init__.py  idempotency.py  users.py
user-service/app/repositories/: __init__.py  users_repository.py
user-service/app/schemas/: __init__.py  balance.py  users.py
user-service/app/services/: auth_service.py  balance_reservation_service.py  user_service.py
user-service/migrations/: env.py
user-service/migrations/versions/: 832f29662ee2_initial_migration.py  a3b4c5d6e7f8_add_idempotency_keys.py
user-service/tests/: conftest.py
user-service/tests/api/: test_users_api.py
user-service/tests/services/: test_auth_service.py  test_user_service.py
(+167 files in other folders)
