[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "Analytics service for event tracking and ClickHouse"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.34.0"
gunicorn = "23.0.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.1"
faststream = {extras = ["kafka"], version = "^0.6.3"}
aiochclient = {extras = ["aiohttp"], version = "^2.6.0"}
aiohttp = "^3.13.2"
prometheus-fastapi-instrumentator = "7.0.2"
sentry-sdk = "2.23.1"
shared = {path = "../shared", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


