[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "Analytics service for event tracking and ClickHouse"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiochclient = {extras = ["aiohttp"], version = "^2.6.0"}
aiohttp = "^3.13.2"
shared = {path = "../shared", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


