[tool.poetry]
name = "cart-service"
version = "0.1.0"
description = "Cart service for shopping cart management"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.34.0"
gunicorn = "23.0.0"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
alembic = "1.14.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.1"
httpx = "0.28.1"
faststream = {extras = ["kafka"], version = "^0.6.3"}
dependency-injector = "^4.48.3"
prometheus-fastapi-instrumentator = "7.0.2"
sentry-sdk = "2.23.1"
shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.15.1"
psycopg2-binary = "^2.9.10"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


