[tool.poetry]
name = "frontend-service"
version = "0.1.0"
description = "Frontend service with API Gateway"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.28.1"
jinja2 = "3.1.5"
python-multipart = "^0.0.9"
shared = {path = "../shared", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


