[tool.poetry]
name = "review-service"
version = "0.1.0"
description = "Review service for product reviews"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = "0.34.0"
gunicorn = "23.0.0"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
alembic = "1.14.0"
pydantic = "2.10.4"
pydantic-settings = "2.7.1"
httpx = "0.28.1"
faststream = {extras = ["kafka"], version = "^0.6.3"}
dependency-injector = "^4.48.3"
prometheus-fastapi-instrumentator = "7.0.2"
sentry-sdk = "2.23.1"
shared = {path = "../shared", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


