[tool.poetry]
name = "review-service"
version = "0.1.0"
description = "Review service for product reviews"
authors = ["Egor Muratov <egor.muratov.27@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
alembic = "1.14.0"
httpx = "0.28.1"
dependency-injector = "^4.48.3"
shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"


